# tensor-redistribution

./: .gitignore  2d_distribute.cpp  CMakeLists.txt  MPI_2d_distribute.c  README.md  configure.sh  euler_run_all_dim.sh  extract_all.sh  parse_input.py  parse_input_chunks.py  parse_input_multi.py  parse_input_redist.py  plot_chunks.py  run_all.sh  run_chunk_sizes.sh
auto/: CMakeLists.txt
auto/include/: send_recv.hpp  validation.hpp
auto/single_block_transmit/: 2d_transmit.cpp  3d_transmit.cpp
codegen_sample/: CMakeLists.txt  redistribute_coord.py  test.py  test1.cpp  test3d_3dgrid.cpp
datatype/: 2d_distribute.cpp  CMakeLists.txt  pg_distribute.cpp
datatype/single_block_transmit/: 2d_trasmit.cpp  3d_trasmit.cpp  4d_trasmit.cpp  5d_trasmit.cpp
manual/: 2d_distribute.cpp  CMakeLists.txt
manual/single_block_transmit/: 2d_trasmit.cpp  3d_trasmit.cpp  4d_trasmit.cpp  5d_trasmit.cpp
measurement/: 2d_single.cpp  3d_single.cpp  4d_single.cpp  5d_put_single.cpp  5d_single.cpp  5d_single_10.cpp  5d_single_15.cpp  5d_single_20.cpp  5d_single_25.cpp  5d_single_30.cpp  CMakeLists.txt  oneside_helper.h
microbenchmarks/: CMakeLists.txt  bandwidth.cpp
redistribute/: CmakeLists.txt  dace_helper.h  redistribute  redistribute.cfg  redistribute.cpp  redistribute.hpp  redistribute_by_dimension.hpp  send_recv_2d.hpp  send_recv_3d.hpp  send_recv_4d.hpp  send_recv_5d.hpp  utils.hpp
scripts/bash/: euler_redist.sh  euler_run_all.sh  euler_run_all_5d_10.sh  euler_run_all_5d_10_new.sh  euler_run_all_5d_15_new.sh  euler_run_all_5d_20.sh  euler_run_all_5d_20_new.sh  euler_run_all_5d_25.sh  euler_run_all_5d_25_new.sh  euler_run_all_5d_30.sh  euler_run_all_5d_new.sh  euler_run_redistribution.sh
scripts/python/: parse_input.py  plot.py  plot_redist.py  plot_single.py  plot_single_block_results.py  plot_single_block_transmission.py
single_block/: 5d_datatype.cpp  5d_manual.cpp  5d_manual_chunk.cpp  CMakeLists.txt
testing/: Usage.md  euler_run_all_dim.sh  handle_single_block_results.py
validation/: 2d_trasmit.cpp  CMakeLists.txt  validation.h
