add_executable(2d_single "2d_single.cpp")
add_executable(3d_single "3d_single.cpp")
add_executable(4d_single "4d_single.cpp")
add_executable(5d_single "5d_single.cpp")
add_executable(5d_single_10 "5d_single_10.cpp")
add_executable(5d_single_20 "5d_single_20.cpp")
add_executable(5d_single_30 "5d_single_30.cpp")
add_executable(5d_put_single "5d_put_single.cpp")
target_include_directories(2d_single PUBLIC "../auto/include" "../redistribute")
target_include_directories(3d_single PUBLIC "../auto/include" "../redistribute")
target_include_directories(4d_single PUBLIC "../auto/include" "../redistribute")
target_include_directories(5d_single PUBLIC "../auto/include" "../redistribute")
target_include_directories(5d_put_single PUBLIC "../auto/include" "../redistribute")
target_include_directories(5d_single_10 PUBLIC "../auto/include" "../redistribute")
target_include_directories(5d_single_20 PUBLIC "../auto/include" "../redistribute")
target_include_directories(5d_single_30 PUBLIC "../auto/include" "../redistribute")
target_link_libraries(2d_single PUBLIC MPI::MPI_CXX OpenMP::OpenMP_CXX lsb)
target_link_libraries(3d_single PUBLIC MPI::MPI_CXX OpenMP::OpenMP_CXX lsb)
target_link_libraries(4d_single PUBLIC MPI::MPI_CXX OpenMP::OpenMP_CXX lsb)
target_link_libraries(5d_single PUBLIC MPI::MPI_CXX OpenMP::OpenMP_CXX lsb)
target_link_libraries(5d_put_single PUBLIC MPI::MPI_CXX OpenMP::OpenMP_CXX lsb)
target_link_libraries(5d_single_10 PUBLIC MPI::MPI_CXX OpenMP::OpenMP_CXX lsb)
target_link_libraries(5d_single_20 PUBLIC MPI::MPI_CXX OpenMP::OpenMP_CXX lsb)
target_link_libraries(5d_single_30 PUBLIC MPI::MPI_CXX OpenMP::OpenMP_CXX lsb)